--- a/ZakYip.Sorting.RuleEngine.Service/appsettings.json
+++ b/ZakYip.Sorting.RuleEngine.Service/appsettings.json
@@ -8,48 +8,48 @@
   },
   "AppSettings": {
     "LiteDb": {
-      "ConnectionString": "Filename=./data/config.db;Connection=shared"  // LiteDB连接字符串 - 用于存储规则配置
+      "ConnectionString": "Filename=./data/config.db;Connection=shared" // LiteDB连接字符串 - 用于存储规则配置
     },
     "MySql": {
-      "ConnectionString": "Server=localhost;Database=sorting_logs;User=root;Password=your_password;",  // MySQL连接字符串 - 用于存储日志数据
-      "Enabled": true,  // 是否启用MySQL，false时使用SQLite降级方案
+      "ConnectionString": "Server=127.0.0.1;Port=3306;Password=f6vQDiiWpXLDUCxR;Database=zakyip_sorting_ruleengine_db;User=root;AllowLoadLocalInfile=true;", // MySQL连接字符串 - 用于存储日志数据
+      "Enabled": true, // 是否启用MySQL，false时使用SQLite降级方案
       "CircuitBreaker": {
-        "FailureRatio": 0.5,  // 失败率阈值（0.0-1.0），达到此值时触发熔断，默认0.5（50%）
-        "MinimumThroughput": 10,  // 最小吞吐量，采样周期内最小请求数，默认10
-        "SamplingDurationSeconds": 30,  // 采样周期（秒），默认30秒
-        "BreakDurationSeconds": 1200  // 熔断持续时间（秒），默认1200秒（20分钟）
+        "FailureRatio": 0.5, // 失败率阈值（0.0-1.0），达到此值时触发熔断，默认0.5（50%）
+        "MinimumThroughput": 10, // 最小吞吐量，采样周期内最小请求数，默认10
+        "SamplingDurationSeconds": 30, // 采样周期（秒），默认30秒
+        "BreakDurationSeconds": 1200 // 熔断持续时间（秒），默认1200秒（20分钟）
       }
     },
     "Sqlite": {
-      "ConnectionString": "Data Source=./data/logs.db"  // SQLite连接字符串 - MySQL降级方案，用于存储日志数据
+      "ConnectionString": "Data Source=./data/logs.db" // SQLite连接字符串 - MySQL降级方案，用于存储日志数据
     },
     "Sharding": {
-      "Enabled": true,  // 是否启用数据分片，默认true
-      "Strategy": "Monthly",  // 分片策略：Daily（日度）、Weekly（周度）、Monthly（月度）
-      "RetentionDays": 90,  // 数据保留天数，默认90天
-      "ColdDataThresholdDays": 30,  // 冷数据阈值天数，超过此天数的数据可归档，默认30天
-      "IdleMinutesBeforeCleanup": 30,  // 空闲多少分钟后开始清理，默认30分钟
-      "IdleCheckIntervalSeconds": 60,  // 空闲检查间隔（秒），默认60秒
-      "CleanupSchedule": "0 0 2 * * ?",  // 清理任务Cron表达式，默认每天凌晨2点执行
-      "ArchiveSchedule": "0 0 3 * * ?"  // 归档任务Cron表达式，默认每天凌晨3点执行
+      "Enabled": true, // 是否启用数据分片，默认true
+      "Strategy": "Monthly", // 分片策略：Daily（日度）、Weekly（周度）、Monthly（月度）
+      "RetentionDays": 90, // 数据保留天数，默认90天
+      "ColdDataThresholdDays": 30, // 冷数据阈值天数，超过此天数的数据可归档，默认30天
+      "IdleMinutesBeforeCleanup": 30, // 空闲多少分钟后开始清理，默认30分钟
+      "IdleCheckIntervalSeconds": 60, // 空闲检查间隔（秒），默认60秒
+      "CleanupSchedule": "0 0 2 * * ?", // 清理任务Cron表达式，默认每天凌晨2点执行
+      "ArchiveSchedule": "0 0 3 * * ?" // 归档任务Cron表达式，默认每天凌晨3点执行
     },
     "ThirdPartyApi": {
-      "BaseUrl": "https://api.example.com",  // 第三方API基础URL
-      "TimeoutSeconds": 30,  // API请求超时时间（秒），默认30秒
-      "ApiKey": ""  // API密钥（可选）
+      "BaseUrl": "https://api.example.com", // 第三方API基础URL
+      "TimeoutSeconds": 30, // API请求超时时间（秒），默认30秒
+      "ApiKey": "" // API密钥（可选）
     },
     "MiniApi": {
-      "Urls": [ "http://localhost:5000" ],  // API服务监听地址和端口
-      "EnableSwagger": true  // 是否启用Swagger文档，生产环境建议设为false
+      "Urls": [ "http://localhost:5000" ], // API服务监听地址和端口
+      "EnableSwagger": true // 是否启用Swagger文档，生产环境建议设为false
     },
     "Cache": {
-      "AbsoluteExpirationSeconds": 3600,  // 缓存绝对过期时间（秒），默认3600秒（1小时）
-      "SlidingExpirationSeconds": 600  // 缓存滑动过期时间（秒），默认600秒（10分钟）
+      "AbsoluteExpirationSeconds": 3600, // 缓存绝对过期时间（秒），默认3600秒（1小时）
+      "SlidingExpirationSeconds": 600 // 缓存滑动过期时间（秒），默认600秒（10分钟）
     },
     "LogFileCleanup": {
-      "Enabled": true,  // 是否启用日志文件清理功能，默认true
-      "RetentionDays": 7,  // 日志文件保留天数，默认7天
-      "LogDirectory": "./logs"  // 日志文件目录，默认"./logs"
+      "Enabled": true, // 是否启用日志文件清理功能，默认true
+      "RetentionDays": 7, // 日志文件保留天数，默认7天
+      "LogDirectory": "./logs" // 日志文件目录，默认"./logs"
     }
   }
 }
